
08/01/2004 - Brian Heineman
 o Partial application of patch [997595] SQL 6.5 Test suite.; general test clean
   up.
 o Updated tests so that they compile with the 1.3 JDK.
 o Updated BlobImpl and ClobImpl so that they compile with the 1.3 JDK.
 o Corrected bug in Blob and Clob file writes where a NullPointerException was
   thrown if close() was called twice on a stream.

07/30/2004 - Brian Heineman
 o Updated build process to correct bug [999702] LICENSE file not included in
   source distribution

07/29/2004 - David Kilzer
 o Changed default Sybase port from 4000 to 7100 in faq.html to match value
   of TdsCore.DEFAULT_SYBASE_PORT.
 o Created TdsCore.DEFAULT_LOB_BUFFER_SIZE constant.  Replaced use of "magic"
   values in other classes.
 o Replaced more "magic" values with TdsCore.MIN_PKT_SIZE and
   TdsCore.MAX_PKT_SIZE in various classes.
 o Made TestBase and DatabaseTestCase abstract so that IntelliJ IDEA would
   not try to instantiate them and run them.
 o Created new abstract UnitTestBase class to hold reflection methods used
   by other test classes.
 o Changed NamedPipeUnitTest to extend UnitTestBase.
 o Changed CSUnitTest to use UnitTestBase methods.

07/28/2004 - David Kilzer
 o Moved TdsCore.TDS42, TDS50, TDS70, TDS80, SQLSERVER and SYBASE constants
   to Driver class per suggestion by Mike Hutchinson.
 o Made TdsCore.DEFAULT_SQLSERVER_PORT and DEFAULT_SYBASE_PORT public.
   Removed use of "magic" values in other classes.
 o Applied patch [997211] Refactor Tds8Test to skip tests if not using TDS 8.0.
   Removed unused TestBase.connectODBC() and TestBase.getConnectionODBC()
   methods.  Now use loadProperties(ODBC_CONNECTION_PROPERTIES) to switch
   the connection to use ODBC.
 o Created new DatabaseTestCase.dropProcedure() method that takes an
   additional Statement argument.  Updated AsTest.testProc1() and testProc2()
   to use the new dropProcedure() method.

07/27/2004 - David Kilzer