@@ -8,6 +8,11 @@ Changes from jTDS 0.8.1
  o Updated BlobImpl and ClobImpl so that they compile with the 1.3 JDK.
  o Corrected bug in Blob and Clob file writes where a NullPointerException was
    thrown if close() was called twice on a stream.
+ o Corrected bug in JtdsPreparedStatement.getParameter() where the error check
+   would incorrectly allow a 0 value (thanks to Mike Hutchinson for the report
+   and fix).
+ o Corrected bug in TdsData.getVariant() where the SYBUNIQUE case would return
+   an incorrect UID string (thanks to Mike Hutchinson for the report and fix).
 
 07/30/2004 - Brian Heineman
  o Updated build process to correct bug [999702] LICENSE file not included in
